adicionando features de atualizar e remover
