# app/Http/Controllers/EventController.php
@@ -2,19 +2,28 @@
 
 namespace App\Http\Controllers;
 
+use App\Domain\dtos\UpdateEventDTO;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\CreateEventRequest;
 use App\Http\Resources\EventResource;
+use Illuminate\Support\Facades\Log;
 use Exception;
-use Illuminate\Http\Request;
+
+use App\Http\ViewModel\EventViewModel;
+
+use App\Domain\Usecases\CreateEventUseCase;
+use App\Domain\Usecases\GetAllUseCase;
+use App\Domain\Usecases\RemoveEventUseCase;
+use App\Domain\Usecases\UpdateEventUseCase;
+
 
 use App\Domain\dtos\CreateEventDTO;
-use App\Domain\Usecases\CreateEventUseCase;
-use Illuminate\Support\Facades\Log;
-
 class EventController extends Controller {
     public function __construct(
         private CreateEventUseCase $createEventUseCase,
+        private GetAllUseCase $getAllUseCase,
+        private RemoveEventUseCase $removeEventUseCase,
+        private UpdateEventUseCase $updateEventUseCase
     ){}
 
     public function create(CreateEventRequest $request){
@@ -30,9 +39,11 @@ class EventController extends Controller {
                 $requestData['description']
             ));
 
+            $eventResult = EventViewModel::toHttpCreate($event);
+
             Log::info('Evento criado com sucesso');
     
-            return new EventResource($event);
+            return $eventResult;
         } catch (Exception $e) {
             Log::error($e->getMessage());
             return response()->json(['msg' => 'Error ao criar evento'], 400);
@@ -40,17 +51,53 @@ class EventController extends Controller {
 
        
     }
-
     public function getAll(){
         try {
-            $events = $this->createEventUseCase->getAll();
+            $events = $this->getAllUseCase->execute();
+
+            $eventsResult = EventViewModel::toHttpGetAll($events);
 
             Log::info('Eventos retornados com sucesso');
 
-            return EventResource::collection($events);
+            return $eventsResult;
         } catch (Exception $e) {
             Log::error($e->getMessage());
-            return response()->json(['msg' => 'Error ao retornar eventos'], 400);
+            return response()->json(['msg' => 'Error ao retornar eventos'], 404);
+        }
+    }
+
+    public function remove(string $id){
+        try {
+            $this->removeEventUseCase->execute($id);
+
+            Log::info('Evento removido com sucesso');
+
+            return response()->json(['msg' => 'Evento removido com sucesso'], 200);
+        } catch (Exception $e) {
+            Log::error($e->getMessage());
+            return response()->json(['msg' => 'Error ao remover evento'], 400);
+        }
+    }
+
+    public function update(string $id, CreateEventRequest $request){
+        try {
+            $requestData = $request->only('name', 'date', 'hour', 'modality', 'place', 'description');
+            
+            $this->updateEventUseCase->execute($id, new UpdateEventDTO(
+                $requestData['name'],
+                $requestData['date'],
+                $requestData['hour'],
+                $requestData['modality'],
+                $requestData['place'],
+                $requestData['description']
+            ));
+
+            Log::info('Evento atualizado com sucesso');
+
+            return response()->json(['msg' => 'Evento atualizado com sucesso'], 200);
+        } catch (Exception $e) {
+            Log::error($e->getMessage());
+            return response()->json(['msg' => 'Error ao atualizar evento'], 400);
         }
     }
 }
